Backend is been pushed only with authController

--- a/day 7/toystore/src/main/resources/application.properties
+++ b/day 7/toystore/src/main/resources/application.properties
@@ -1,8 +1,21 @@
-spring.application.name=toystore
+# spring.application.name=toystore
+# server.port=5454
+# spring.datasource.url=jdbc:mysql://localhost:3306/toystore
+# spring.datasource.username=root
+# spring.datasource.password=Selvi@Laksita@22
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+
 server.port=5454
-spring.datasource.url=jdbc:mysql://localhost:3306/toystore
+
+#db specific properties
+spring.datasource.url=jdbc:mysql://localhost:3306/ts
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Selvi@Laksita@22
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
